--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -24,7 +24,7 @@ manager.</li>
 manager window.</li>
 </ol>
 </li>
-<li>Test the the archive is ok (extract its content to a new
+<li>Test that the archive is ok (extract its content to a new
 folder, and try yapbam from it).</li>
 <li>Upload the zip file to sourceforge.</li>
 <li>Test that the archive on sourceforge is ok ... sometimes,
