--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -18,10 +18,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.9.4 (??/09/2011)</h1>
+<h1>Version 0.9.4 (02/10/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span> : L'export ne fonctionnait pas si on sélectionnait les commentaires dans les champs à exporter.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : L'export ne fonctionnait pas si on sélectionnait les commentaires dans les champs à exporter.</li><li><span class="bugFix">Règle un problème</span> avec le JDK 1.7 : La fermeture de Yapbam ne fermait pas le processus de la machine virtuelle java.</li>
 </ul>
 <ul>
 </ul>
