--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
 
 <style type="text/css">
@@ -12,20 +13,23 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
-<body>
-<h1>Version 0.9.4 (10/02/2011)</h1>
+</style></head><body>
+<h1>Version 0.9.5 (10/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Fixes a bug</span>:
-the export crashed when "comment" was in the exported fields.</li><li><span class="bugFix">Fixes a problem</span> with Java 1.7: closing Yapbam didn't exit the java virtual machine process.</li>
-</ul>
+<li><span id="result_box" class="" lang="en"><span class="hps">Safeguarding the</span> <span class="hps">filter between</span> <span class="hps">two</span> <span class="hps">launches</span> <span class="hps">Yapbam</span> <span class="hps">is again</span> <span class="hps">available for</span> <span class="hps">encrypted</span> <span class="hps">data files</span><span class="">.</span></span><br>
+<span class="bugFix"></span></li></ul>
 <ul>
 </ul>
 <ul>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.9.4 (10/02/2011)</h2>
+<ul>
+<li><span class="bugFix">Fixes a bug</span>:
+the export crashed when "comment" was in the exported fields.</li><li><span class="bugFix">Fixes a problem</span> with Java 1.7: closing Yapbam didn't exit the java virtual machine process.</li>
+</ul>
 <h2>Version 0.9.3 (09/25/2011)</h2>
 <ul>
 <li><span class="bugFix">Fixes a bug</span>
