--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -13,11 +13,15 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head><body>
-<h1>Version 0.9.5 (10/??/2011)</h1>
+</style></head>
+<body>
+<h1>Version 0.9.5 (10/16/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Safeguarding the filter between two Yapbam launches is again available for encrypted data files.</li>
+  <li>Safeguarding the filter between two Yapbam launches is again available for encrypted data files.</li><li><span class="bugFix">Fixes some bugs</span>:
+Under Windows, when the files in the data directory was hidden, the
+state and / or preferences were not saved. Similarly, the currency
+converter didn't work.</li><li>Added specific error messages on backup failure of the preferences or of startup state.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
