--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -17,10 +17,11 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style></head><body>
-<h1>Version 0.9.5 (??/10/2011)</h1>
+</style></head>
+<body>
+<h1>Version 0.9.5 (16/10/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>La sauvegarde du filtre entre deux lancements de Yapbam est de nouveau disponibles pour les fichiers de données cryptés.</li>
+<ul><li>La sauvegarde du filtre entre deux lancements de Yapbam est de nouveau disponible pour les fichiers de données cryptés.</li><li><span class="bugFix">Correction de bug</span> : Sous windows, lorsque les fichiers situés dans le répertoire data étaient cachés, l'état et/ou les préférences n'étaient pas sauvegardés. De même, le convertisseur de devise ne fonctionnait pas.</li><li>Ajout de messages d'erreur spécifiques en cas d'échec de la sauvegarde de l'état au démarrage et des préférences.</li>
 </ul>
 <ul>
 </ul>
