--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,16 +15,25 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.9.5 (10/16/2011)</h1>
+<h1>Version 0.9.6 (10/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Safeguarding the filter between two Yapbam launches is again available for encrypted data files.</li><li><span class="bugFix">Fixes some bugs</span>:
-Under Windows, when the files in the data directory was hidden, the
-state and / or preferences were not saved. Similarly, the currency
-converter didn't work.</li><li>Added specific error messages on backup failure of the preferences or of startup state.</li>
+  <li><span class="bugFix">Fixes a bug</span>: Displaying the balance history 
+    of an account that a null initial balance and all its transaction's amount 
+    null resulted in an error.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.9.5 (10/16/2011)</h2>
+<ul>
+  <li>Safeguarding the filter between two Yapbam launches is again available for 
+    encrypted data files.</li>
+  <li><span class="bugFix">Fixes some bugs</span>: Under Windows, when the files 
+    in the data directory was hidden, the state and / or preferences were not 
+    saved. Similarly, the currency converter didn't work.</li>
+  <li>Added specific error messages on backup failure of the preferences or of 
+    startup state.</li>
+</ul>
 <h2>Version 0.9.4 (10/02/2011)</h2>
 <ul>
 <li><span class="bugFix">Fixes a bug</span>:
