--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,14 +19,26 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.9.5 (16/10/2011)</h1>
+<h1>Version 0.9.6 (??/10/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>La sauvegarde du filtre entre deux lancements de Yapbam est de nouveau disponible pour les fichiers de données cryptés.</li><li><span class="bugFix">Correction de bug</span> : Sous windows, lorsque les fichiers situés dans le répertoire data étaient cachés, l'état et/ou les préférences n'étaient pas sauvegardés. De même, le convertisseur de devise ne fonctionnait pas.</li><li>Ajout de messages d'erreur spécifiques en cas d'échec de la sauvegarde de l'état au démarrage et des préférences.</li>
-</ul>
 <ul>
+  <li><span class="bugFix">Correction d'un bug</span> : L'affichage de l'historique 
+    du solde d'un compte poss&eacute;dant un solde initial nul et uniquement des 
+    op&eacute;rations de montant nul provoquait une erreur.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
+<h2>Version 0.9.5 (16/10/2011)</h2>
+<ul>
+  <li>La sauvegarde du filtre entre deux lancements de Yapbam est de nouveau disponible 
+    pour les fichiers de données cryptés.</li>
+  <li><span class="bugFix">Correction de bug</span> : Sous windows, lorsque les 
+    fichiers situés dans le répertoire data étaient cachés, l'état et/ou les préférences 
+    n'étaient pas sauvegardés. De même, le convertisseur de devise ne fonctionnait 
+    pas.</li>
+  <li>Ajout de messages d'erreur spécifiques en cas d'échec de la sauvegarde de 
+    l'état au démarrage et des préférences.</li>
+</ul>
 <h2>Version 0.9.4 (02/10/2011)</h2>
 <ul>
 <li><span class="bugFix">Correction d'un bug</span> : L'export ne fonctionnait pas si on sélectionnait les commentaires dans les champs à exporter.</li><li><span class="bugFix">Règle un problème</span> avec le JDK 1.7 : La fermeture de Yapbam ne fermait pas le processus de la machine virtuelle java.</li>
