--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -18,11 +18,13 @@ color: #ff9900;
 <h1>Version 0.9.8 (??/11/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span> : Certains
-séparateurs (par exemple \) n'étaient pas supporté dans l'import de
-fichiers. Les utiliser provoquait le plantage du dialogue d'import de
-fichiers.<br>
-</li>
+  <li><span class="bugFix">Correction d'un bug</span> : Certains séparateurs (par 
+    exemple \) n'étaient pas supporté dans l'import de fichiers. Les utiliser 
+    provoquait le plantage du dialogue d'import de fichiers.</li>
+  <li><span class="bugFix">Correction d'un bug </span>: Utiliser des noms de comptes, 
+    mode de paiement ou de cat&eacute;gories commen&ccedil;ant ou terminant par 
+    des espaces pouvait provoquer des plantages dans les dialogues de cr&eacute;ation 
+    de ces objets.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
