--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -13,16 +13,20 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head><body>
+</style></head>
+<body>
 <h1>Version 0.9.8 (11/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li><span class="bugFix">Fixes a bug</span>: Some imported file separators (eg 
+  <li><span class="bugFix">Bug fixes:</span></li><ul><li><span class="bugFix"></span> Some imported file separators (eg 
     \) were not supported. Using such a separator led to a crash of the import 
-    file dialog.</li>
-  <li><span class="bugFix">Fixes a bug</span>: Using account names, method of 
+    file dialog.</li></ul>
+  <ul><li><span class="bugFix"></span>Using account names, method of 
     payment or categories that begin or end with spaces could cause crashes in 
-    the dialog for creating these objects.</li>
+    the dialog for creating these objects.</li><li>The
+icons and warning messages (when the threshold of balance is exceeded
+or when there are periodic transactions to generate) were sometimes
+displayed on the wrong tab.</li></ul>
 </ul>
 <hr>
 <h1>Previous releases</h1>
