--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -18,13 +18,15 @@ color: #ff9900;
 <body>
 <h1>Version 0.9.8 (??/11/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul>
+<ul><li>Lors de la création en masse d'opérations, la date est mainteant conservée lorsqu'on clique sur le bouton "Suivant".</li></ul><ul>
   <li><span class="bugFix">Corrections de bug</span> :&nbsp;</li><ul><li>Certains séparateurs (par 
     exemple \) n'étaient pas supportés dans l'import de fichiers. Les utiliser 
     provoquait le plantage du dialogue d'import de fichiers.</li></ul><ul><li>Utiliser des noms de comptes, 
     mode de paiement ou de catégories commençant ou terminant par 
     des espaces pouvait provoquer des plantages dans les dialogues de création 
-    de ces objets.</li><li>Les icônes et messages d'alerte (seuil de solde ou opérations périodiques à générer) étaient parfois affichés sur le mauvais onglet.</li></ul>
+    de ces objets.</li><li>Les
+icônes et messages d'alerte (seuil de solde ou opérations périodiques à
+générer) étaient parfois affichés sur le mauvais onglet.</li></ul>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
